# rust-battleships

./: Cargo.toml
backend/src/: game.rs  lib.rs  location.rs  ship.rs
frontend/: package-lock.json  package.json
frontend/src/: AddingGrid.css  AddingGrid.tsx  App.css  App.tsx  index.css  main.tsx
src/: backwards.rs  game.rs  lib.rs  location.rs  main.rs  ship.rs
tests/: cmd_game.rs  location_and_ship.rs
