[package]
name = "rust_learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["ws"] }
futures = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.24"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
maplit = "1.0.2"
test_bin = "0.4.0"
